--- a/pages/news/zzsb_202003122154.md
+++ b/pages/news/zzsb_202003122154.md
@@ -1,6 +1,6 @@
 ---
 title: 认知差距
-tags: [文化冲突]
+tags: [冲突, 差异, 宁静致远]
 keywords: 冲突, 差异, 宁静致远
 last_updated: March 12, 2020
 summary: "夫君子之行，静以修身，俭以养德。非淡泊无以明志，非宁静无以致远。夫学须静也，才须学也。非学无以广才，非志无以成学。淫慢则不能励精，险躁则不能冶性。年与时驰，意与日去，遂成枯落，多不接世，悲守穷庐，将复何及！"
@@ -16,7 +16,7 @@ folder: news
 
 地域的差异在人类发展的长河中形成的的文化差异，会导致人们在相同的事情面前作出不同行为。而这位作者用子女寻找另一半来举例说明文化的差异。如果他搞一个类似百家讲坛的节目来讲一下文明的冲突，估计会很有意思。
 
-在看完作者写的文章后，我自己陷入了思考，估计上帝已经笑累了，管他了我接着想我的，在过二十年我儿子领回来一个洋妞怎么办？！经济全球化，中国在世界的地位越来越重要， 二十年后会是什么样子不好预测，但大的趋势总归是世界人们交流会更加容易，小时候去个姥姥家起个大早去了大下午了，现在十几个小时都跨半球了。所以领回来一个其它肤色的概率很大。
+在看完作者写的文章后，我自己陷入了思考，估计上帝已经笑累了，管他了我接着想我的，在过二十几年我儿子处了一个其它国家的女朋友怎么办？！经济全球化，中国在世界的地位越来越重要， 二十年后会是什么样子不好预测，但大的趋势总归是世界人们交流会更加容易，小时候去个姥姥家起个大早去了大下午了，现在十几个小时都跨半球了。所以领回来一个其它肤色的概率很大。
 
 地域产生的文化冲突是需要时间来磨合的，有的能磨掉，有的是磨不掉的。婚姻毕竟是需要三观一致的，以我现在的认知，中西方文化的冲突会愈演愈烈，磨合与相融的过程还是不要发生在他身上，当然这个是他的自由，而且受法律的保护。当他人生的路上走到这个节点的时候，如果他会考虑我的感受，那么我会告诉他我最多可以接受日韩的，欧美亚非拉的就算了。
 
